Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   		      <input type="radio" name="zoom" value="18">Close<br/>
   		      <input type="radio" name="zoom" value="20">Super Close<br/>
   		     </fieldset>
-		      <button id="save_button">Save</button>
+		      <button id="save_button">Keep it</button>
 	      </form>
 		</div>
 
